--- a/src/main/resources/templates/MyPage.html
+++ b/src/main/resources/templates/MyPage.html
@@ -5,6 +5,12 @@
 <title>Insert title here</title>
 </head>
 <body>
-
+    <div class="container my-2">
+        <header th:include="Header :: header">
+		</header>
+        <main>
+            <p>테스트</p>
+        </main>
+    </div>
 </body>
 </html>
