--- a/bin/main/templates/kobis/rank.html
+++ b/bin/main/templates/kobis/rank.html
@@ -1,10 +1,100 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>박스오피스 순위</title>
+
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+	rel="stylesheet">
+
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
+<script>
+	$(document).ready(function(){
+		$("#btn-search").on("click",function(){
+			var date = $("#date").val();
+			
+			date = converDate(date);
+			
+ 			$.ajax({
+				url:"/watcat/kobis",
+				type:"POST",
+				data:{startDt, startDt, endDt:endDt},
+				success:function(data){
+					var tbody = $("#ajaxTable> tbody").append(result);
+					tbody.empty();
+					
+					
+					for(var i = 0; i <data.length; i++){
+						var result= "<tr>";
+						result += "<td>" + data[i].rank + 	"</td>";
+						result += "<td>" + data[i].movieNm + "</td>";
+						result += "<td>" + data[i].openDt+"</td>";
+						result += "<td>" + data[i].audiAcc + "</td>";
+
+						result += "</tr>";
+						
+						tbody.append(result);
+					}
+				},
+				error:function(){
+					alert("ajax통신중 오류가 발생하였습니다.")
+				}
+			}); 
+		});
+	});
+	
+	function converDate(date){
+		var temp = date.split("-");
+		return temp.join("");
+
+		
+	}
+</script>
 </head>
 <body>
 
+
+
+	<main class="container mt-5 border-bottom">
+		<div class="row my-3">
+			<div class="col-sm px-3">
+				<div class="row my-3 border-bottom">
+					<div class="col-sm-5">
+						<div class="form-floating">
+							<input type="date" class="form-control" id="start-dt"
+								placeholder="날짜"> <label for="date">날짜</label>
+						</div>
+					</div>
+
+					<div class="col-sm-2 d-grid">
+						<button type="button" id="btn-search" class="btn btn-primary">검색</button>
+					</div>
+				</div>
+				<div>
+					<div class="col-3">
+						<h1>순위</h1>
+					</div>
+					<div class="col-9">
+
+
+					</div>
+
+				</div>
+
+			</div>
+		</div>
+
+	</main>
+
+
+
 </body>
 </html>
+
