--- a/bin/main/templates/Header.html
+++ b/bin/main/templates/Header.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header th:fragment="header">
-		<div class="p-3 row text-white bg2ndColor">
+		<div class="p-3 row text-white" style="background-color: rgb(59, 59, 59);">
 			<div class="col my-auto">
 				<p class="h1 text-danger ms-3" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">WaTCaT</p>
 			</div>
