--- a/bin/main/templates/movie/detail.html
+++ b/bin/main/templates/movie/detail.html
@@ -6,12 +6,82 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<link rel="stylesheet" href="/css/style.css">
 <script>
 $(document).ready(()=>{
-	let title = $("#title").val();
-	let genre = $("#genre").val();
-	$("#movieBox").empty();
- 	$.ajax({
+	//tmdb api 활용
+	let qTitle = $("#title").val(); // recommend에서 get 방식으로 전달한 영화 제목
+	let searchUrl = "https://api.themoviedb.org/3/search/movie?api_key=a1c25fa7fbd7117d8d4d73bf1892deae&query="+qTitle;
+	$.ajax({
+		type:"GET",
+		url:searchUrl,
+		success:(results)=>{
+			let result = results["results"][0];
+			let movieId = result.id;
+			let posterPath =result.poster_path;
+			let apiUrl = "https://api.themoviedb.org/3/movie/";
+			let apiKey = "?api_key=a1c25fa7fbd7117d8d4d73bf1892deae";
+			let language = "&language=ko";
+			apiUrl += movieId; 
+			apiUrl += apiKey;
+			apiUrl += language;
+			$.ajax({
+				type:"GET",
+				url:apiUrl,
+				success:(response)=>{
+					// 포스터 이미지
+					let imageUrl ="https://image.tmdb.org/t/p/w500";
+					//imageUrl += posterPath;
+					// 백드랍 이미지
+					let backdrop= response.backdrop_path;
+					imageUrl += backdrop;
+					
+					
+					// 영화 장르
+					let genres = response.genres;
+					let genre="";
+					for(let i=0;i<genres.length;i++){
+						genre += genres[i].name;
+						if(i<genres.length-1)
+							genre += ", ";
+					}
+					// 영화 제목
+					let title = response.title;
+					// 영화 소제목
+					let tagline = response.tagline;
+					// 영화 줄거리
+					let overview = response.overview;
+					// 영화 개봉일
+					let release = response.release_date;
+					$("#movieBox").empty();
+					let temp_html = `<div id="movieDataBox">
+						<div id="movieTitle">${title}</div>
+						<div id="movieTagline">${tagline}</div>
+		                <ul class="list-unstyled">
+		                    <li>줄거리 <span>${overview}</span></li>
+		                    <li>장르 <span>${genre}</span></li>
+		                    <li>개봉 <span>${release}</span></li>
+		                </ul>
+					</div>
+					<div id="movieImgBox">
+						<img alt="영화 이미지" src="${imageUrl}">
+					</div>`;
+					$("#movieBox").append(temp_html);
+					console.log(imageUrl);
+				},
+				error:()=>{
+					alert("get movie details 실패");
+				}
+			});
+		},
+		error:()=>{
+			alert("search 실패");
+		}
+	});
+	
+	
+	//let genre = $("#genre").val();
+ 	/* $.ajax({
 		type:"GET",
 		url:"/movie/detail/api",
 		data:{title:title,genre:genre},
@@ -41,23 +111,25 @@ $(document).ready(()=>{
 		error:()=>{
 			alert("ajax 통신 실패");
 		}
-	}); 
+	});  */
 })
 	
 </script> 
 </head>
 <body>
+	<header th:include="header"></header>
     <div class="container">
 		<input type="hidden" id="title" name="title" th:value="${title}">
 		<input type="hidden" id="genre" name="genre" th:value="${genre}">
 		
-		<div id="movieBox" class="d-flex justify-content-between col-sm-6 mx-auto">
+		<div id="movieBox" class="d-flex justify-content-between mx-auto">
 			<div id="movieDataBox">
 				<div id="movieTitle">제목</div>
+                <div id="movieTagline">소제목</div>
                 <ul class="list-unstyled">
-                    <li>감독 <span>감독이름</span></li>
-                    <li>출연 <span>배우이름</span></li>
-                    <li>개요 <span>영화 설명</span></li>
+                    <li> <span>내용</span></li>
+                    <li>장르 <span>장르</span></li>
+                    <li>개봉 <span>2000-01-01</span></li>
                 </ul>
 			</div>
 			<div id="movieImgBox">
