--- a/src/main/resources/templates/movie/recommend.html
+++ b/src/main/resources/templates/movie/recommend.html
@@ -7,8 +7,10 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <link rel="stylesheet" href="/css/movieRec.css">
+<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+	<header th:include="header"></header>
     <div id="div-carousel" class="carousel slide" data-bs-ride="carousel">
             <!-- 인디케이터 -->
             <div class="carousel-indicators">
