--- a/bin/main/templates/movie/detail.html
+++ b/bin/main/templates/movie/detail.html
@@ -6,6 +6,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<link rel="stylesheet" href="/css/movieRec.css">
 <link rel="stylesheet" href="/css/style.css">
 <script>
 $(document).ready(()=>{
@@ -30,7 +31,7 @@ $(document).ready(()=>{
 				url:apiUrl,
 				success:(response)=>{
 					// 포스터 이미지
-					let imageUrl ="https://image.tmdb.org/t/p/w500";
+					let imageUrl ="https://image.tmdb.org/t/p/original";
 					//imageUrl += posterPath;
 					// 백드랍 이미지
 					let backdrop= response.backdrop_path;
@@ -54,29 +55,62 @@ $(document).ready(()=>{
 					// 영화 개봉일
 					let release = response.release_date;
 					$("#movieBox").empty();
-					let temp_html = `<div id="movieDataBox">
-						<div id="movieTitle">${title}</div>
-						<div id="movieTagline">${tagline}</div>
+					let temp_html = `<div id="movieDataBox" class="col-sm-6">
+						<h1 class="fw-bold">${title}</h1>
+						<h4 class="fw-bold">${tagline}</h4>
 		                <ul class="list-unstyled">
-		                    <li>줄거리 <span>${overview}</span></li>
-		                    <li>장르 <span>${genre}</span></li>
-		                    <li>개봉 <span>${release}</span></li>
+		                    <li class="mb-2"><span>${overview}</span></li>
+		                    <li class="me-3">장르 <span>${genre}</span></li>
+		                    <li class="me-3">개봉 <span>${release}</span></li>
 		                </ul>
 					</div>
-					<div id="movieImgBox">
-						<img alt="영화 이미지" src="${imageUrl}">
+					<div id="movieImgBox" class="col-sm-6">
+						<img id="movieImg" alt="영화 이미지" src="${imageUrl}">
 					</div>`;
 					$("#movieBox").append(temp_html);
 					console.log(imageUrl);
 				},
 				error:()=>{
 					alert("get movie details 실패");
-				}
+				},
+				beforeSend: function () {
+		            var width = 0;
+		            var height = 0;
+		            var left = 0;
+		            var top = 200;
+
+		            width = 50;
+		            height = 50;
+
+
+		            /* top = ( $(window).height() - height ) / 2 + $(window).scrollTop(); */
+		            left = ( $(window).width() - width ) / 2 + $(window).scrollLeft();
+
+
+
+		            if($("#div_ajax_load_image").length != 0) {
+		                   $("#div_ajax_load_image").css({
+		                          "top": top+"px",
+		                          "left": left+"px"
+		                   });
+		                   $("#div_ajax_load_image").show();
+		            }
+		            else {
+		                   $('body').append('<div id="div_ajax_load_image" style="position:absolute; top:' + top + 'px; left:' + left + 'px; width:' + width + 'px; height:' + height + 'px; z-index:9999; background:#f0f0f0; filter:alpha(opacity=50); opacity:alpha*0.5; margin:auto; padding:0; "><img src="/images/ajax_loader.gif" style="width:50px; height:50px;"></div>');
+		            }
+
+		     }
+		     , complete: function () {
+		                   $("#div_ajax_load_image").hide();		    	 			
+		    	 		
+		     }
+		     
 			});
 		},
 		error:()=>{
 			alert("search 실패");
 		}
+
 	});
 	
 	
@@ -116,23 +150,23 @@ $(document).ready(()=>{
 	
 </script> 
 </head>
-<body>
+<body class="bg-black text-white">
 	<header th:include="header"></header>
-    <div class="container">
+    <div class="container mt-3">
 		<input type="hidden" id="title" name="title" th:value="${title}">
 		<input type="hidden" id="genre" name="genre" th:value="${genre}">
 		
-		<div id="movieBox" class="d-flex justify-content-between mx-auto">
-			<div id="movieDataBox">
-				<div id="movieTitle">제목</div>
-                <div id="movieTagline">소제목</div>
+		<div id="movieBox" class="row">
+			<div id="movieDataBox" class="col-sm-6">
+				<h1>제목</h1>
+                <h3 id="movieTagline">소제목</h3>
                 <ul class="list-unstyled">
-                    <li> <span>내용</span></li>
-                    <li>장르 <span>장르</span></li>
-                    <li>개봉 <span>2000-01-01</span></li>
+                    <li>줄거리<span>내용</span></li>
+                    <li>장르<span>장르</span></li>
+                    <li>개봉<span>2000-01-01</span></li>
                 </ul>
 			</div>
-			<div id="movieImgBox">
+			<div id="movieImgBox" class="col-sm-6">
 				<img alt="영화 이미지" src="">
 			</div>
 		</div>
