--- a/src/main/resources/static/css/movieRec.css
+++ b/src/main/resources/static/css/movieRec.css
@@ -9,3 +9,14 @@
 	width: auto;
 	margin: auto;
 }
+
+/* 영화 이미지 */
+ #movieImgBox {
+	overflow: hidden;
+}
+
+#movieImgBox img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
