--- a/src/main/resources/templates/kobis/rank2.html
+++ b/src/main/resources/templates/kobis/rank2.html
@@ -1,99 +1,55 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8">
-        <title>박스오피스 순위</title>
+<head>
+<meta charset="UTF-8">
+<title>박스 오피스 순위</title>
 
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-            rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-
-        <script>
-            $(document).ready(function () {
-                $("#btn-search").on("click", function () {
-                    var date = $("#date").val();
-
-                    date = converDate(date);
-
-                    $.ajax({
-                        url: "/watcat/kobis",
-                        type: "POST",
-                        data: {
-                            startDt,
-                            startDt,
-                            endDt: endDt
-                        },
-                        success: function (data) {
-                            var tbody = $("#ajaxTable> tbody").append(result);
-                            tbody.empty();
-
-                            for (var i = 0; i < data.length; i++) {
-                                var result = "<tr>";
-                                result += "<td>" + data[i].rank + "</td>";
-                                result += "<td>" + data[i].movieNm + "</td>";
-                                result += "<td>" + data[i].openDt + "</td>";
-                                result += "<td>" + data[i].audiAcc + "</td>";
-
-                                result += "</tr>";
-
-                                tbody.append(result);
-                            }
-                        },
-                        error: function () {
-                            alert("ajax통신중 오류가 발생하였습니다.")
-                        }
-                    });
-                });
-            });
-
-            function converDate(date) {
-                var temp = date.split("-");
-                return temp.join("");
-
-            }
-        </script>
-    </head>
-    <body>
-
-        <main class="container mt-5 border-bottom">
-            <div class="row my-3">
-                <div class="col-sm px-3">
-                    <div class="row my-3 border-bottom">
-                        <div class="col-sm-5">
-                            <div class="form-floating">
-                                <input type="date" class="form-control" id="start-dt" placeholder="날짜">
-                                <label for="date">날짜</label>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-2 d-grid">
-                            <button type="button" id="btn-search" class="btn btn-primary">검색</button>
-                        </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+	
+</head>
+<body>
+	<header class="container">
+		<div class="mt-5">
+			<div class="p-5 my-3 rounded bg-danger bg-opacity-25">
+				<h1 class="text-center m-4">코로나 감염 현황 XML 파일 파싱</h1>
+			</div>
+		</div>
+	</header>
+	
+	<main class="container">
+		<div class="row">
+			<div class="col-sm mx-auto">
+                    <div class="list">
+                        <ul style="list-style-type: none" th:if="${#lists.size(kobis)} > 0" th:each="item : ${kobis}">
+                            <li class="h5" id="rank" th:text="${item.rank}">순위</li>
+                            <li class="h4" id="movieNm" th:text="${item.movieNm}">>영화 이름</li>
+                            <li>
+                                <span id="openDt" th:text="${item.openDt}">>개봉일</span>
+                                <span>
+                                    /
+                                </span><span id="audiAcc" th:text="${item.audiAcc}">>관객수</span>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="row">
-                        <h5 class="col-1" id="rank">순위</h5>
-                        <div class="col
-					-11">
-                            <h4 id="title">제목</h4>
-                            <span id="openDt">개봉일</span>
-                            <span>
-                                /
-                            </span>
-                            <span id="audiAcc">누적 관객수</span>
-
-                        </div>
-
-                    </div>
-
-                </div>
-            </div>
-
-        </main>
-
-    </body>
+			</div>
+		</div>
+	</main>
+</body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
