--- a/bin/main/templates/movie/recommend.html
+++ b/bin/main/templates/movie/recommend.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="/css/movieRec.css">
 <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
+<body class="bg-black text-white">
 	<header th:include="header"></header>
     <div id="div-carousel" class="carousel slide" data-bs-ride="carousel">
             <!-- 인디케이터 -->
