--- a/bin/main/templates/movie/detail.html
+++ b/bin/main/templates/movie/detail.html
@@ -17,7 +17,15 @@ $(document).ready(()=>{
 		type:"GET",
 		url:searchUrl,
 		success:(results)=>{
-			let result = results["results"][0];
+			let resultArray = results["results"];
+			let index=0;
+			for(let i=0;i<resultArray.length;i++){
+				if(resultArray[i].title == qTitle){
+					index=i;
+					break;
+				}
+			}
+			let result = resultArray[index];
 			let movieId = result.id;
 			let posterPath =result.poster_path;
 			let apiUrl = "https://api.themoviedb.org/3/movie/";
@@ -26,6 +34,21 @@ $(document).ready(()=>{
 			apiUrl += movieId; 
 			apiUrl += apiKey;
 			apiUrl += language;
+			
+			// 영화 제목에 해당하는 movieId 서버로 전송
+			/* $.ajax({
+				type:"POST",
+				url:"",
+				data:{title:qTitle,movieId:movieId},
+				success:(response)=>{
+					alert("데이터 전송 성공");
+				},
+				error:()=>{
+					alert("영화 데이터 서버 전송 에러");
+				}
+			}); */
+			
+			// 영화 상세정보 get
 			$.ajax({
 				type:"GET",
 				url:apiUrl,
@@ -54,57 +77,46 @@ $(document).ready(()=>{
 					let overview = response.overview;
 					// 영화 개봉일
 					let release = response.release_date;
+					
 					$("#movieBox").empty();
 					let temp_html = `<div id="movieDataBox" class="col-sm-6">
 						<h1 class="fw-bold">${title}</h1>
 						<h4 class="fw-bold">${tagline}</h4>
-		                <ul class="list-unstyled">
-		                    <li class="mb-2"><span>${overview}</span></li>
-		                    <li class="me-3">장르 <span>${genre}</span></li>
-		                    <li class="me-3">개봉 <span>${release}</span></li>
-		                </ul>
+						<div class="mb-3"><span>${overview}</span></div>
+						<div class="d-flex justify-content-between">
+			                <ul class="list-unstyled">	
+			                    <li class="text-secondary fw-bold"><span class="me-3">장르</span><span>${genre}</span></li>
+			                    <li class="text-secondary fw-bold"><span class="me-3">개봉</span><span>${release}</span></li>
+			                </ul>
+			                <div>
+			                	<button class="add-wish btn btn-secondary">
+			                		<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+		                	    		<path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
+		                		  	</svg>
+		                		  	<span>찜하기</span>
+		                		</button>
+	                		    <button class="cancel-wish btn btn-danger">
+	                		    	<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg" viewBox="0 0 16 16">
+			                		    <path d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z"/>
+			                		</svg>
+			                		<span>찜하기</span>
+		                		</button>
+			                </div>
+		                </div>
 					</div>
 					<div id="movieImgBox" class="col-sm-6">
 						<img id="movieImg" alt="영화 이미지" src="${imageUrl}">
 					</div>`;
-					$("#movieBox").append(temp_html);
+					$("movieBox").css('display','none');
+					let imgs = $("#movieBox").append(temp_html).find("#movieImg");
+					imgs.onload = ()=>{
+						$("movieBox").css('display','block');	
+					}
 					console.log(imageUrl);
 				},
 				error:()=>{
 					alert("get movie details 실패");
-				},
-				beforeSend: function () {
-		            var width = 0;
-		            var height = 0;
-		            var left = 0;
-		            var top = 200;
-
-		            width = 50;
-		            height = 50;
-
-
-		            /* top = ( $(window).height() - height ) / 2 + $(window).scrollTop(); */
-		            left = ( $(window).width() - width ) / 2 + $(window).scrollLeft();
-
-
-
-		            if($("#div_ajax_load_image").length != 0) {
-		                   $("#div_ajax_load_image").css({
-		                          "top": top+"px",
-		                          "left": left+"px"
-		                   });
-		                   $("#div_ajax_load_image").show();
-		            }
-		            else {
-		                   $('body').append('<div id="div_ajax_load_image" style="position:absolute; top:' + top + 'px; left:' + left + 'px; width:' + width + 'px; height:' + height + 'px; z-index:9999; background:#f0f0f0; filter:alpha(opacity=50); opacity:alpha*0.5; margin:auto; padding:0; "><img src="/images/ajax_loader.gif" style="width:50px; height:50px;"></div>');
-		            }
-
-		     }
-		     , complete: function () {
-		                   $("#div_ajax_load_image").hide();		    	 			
-		    	 		
-		     }
-		     
+				}
 			});
 		},
 		error:()=>{
@@ -112,8 +124,61 @@ $(document).ready(()=>{
 		}
 
 	});
+	let userId = $("#userId").val();// 임시데이터 3
+	// 서버에서 찜하기 정보 획득
+	/* $.ajax({
+		type:"GET",
+		url:"",
+		//data:{title:title,userId:userId}, //영화제목, 사용자 id
+		success:(response)=>{
+			//response(wishList)에는 찜하기 목록(영화제목들)이 들어있을 것임
+			for(let i=0;i>response.length;i++){
+				if(response.wishListTitle != title) {// 들고온 찜하기 목록 제목과 title이 일치하지 않는다면(찜하기 목록에 없다면)
+						$(".add-wish").css('display','block');
+						$(".cancel-wish").css('display','none');
+				} else {
+					$(".add-wish").css('display','none');
+					$(".cancel-wish").css('display','block');
+				}	
+			}
+		},
+		error:()=>{
+			alert("user정보 획득 실패");
+		}
+	}); */
+	
+	//찜하기 추가 버튼 클릭 이벤트
+	/* $(".add-wish").on("click",()=>{
+		$.ajax({
+			type:"POST",
+			url:"",
+			//data:{title:title,userId:userId},
+			success:(response)=>{
+				//위의 ajax get 반복
+			},
+			error:()=>{
+				alert("user정보 획득 실패");
+			}
+		})
+	}); */
+	
+	//찜하기 취소 클릭 이벤트
+	/* $(".cancel-wish").on("click",()=>{
+		$.ajax({
+			type:"POST",
+			url:"",
+			//data:{title:title,userId:userId},
+			success:(response)=>{
+				//위의 ajax get 반복
+			},
+			error:()=>{
+				alert("user정보 획득 실패");
+			}
+		})
+	}); */
 	
 	
+	//네이버 api 요청
 	//let genre = $("#genre").val();
  	/* $.ajax({
 		type:"GET",
@@ -154,20 +219,13 @@ $(document).ready(()=>{
 	<header th:include="header"></header>
     <div class="container mt-3">
 		<input type="hidden" id="title" name="title" th:value="${title}">
+		<!-- <input type="hidden" id="userId" name="userId" th:value="${session.userId}"> 사용자 id-->
+		<input type="hidden" id="userId" name="userId" value="3">
 		<input type="hidden" id="genre" name="genre" th:value="${genre}">
 		
 		<div id="movieBox" class="row">
-			<div id="movieDataBox" class="col-sm-6">
-				<h1>제목</h1>
-                <h3 id="movieTagline">소제목</h3>
-                <ul class="list-unstyled">
-                    <li>줄거리<span>내용</span></li>
-                    <li>장르<span>장르</span></li>
-                    <li>개봉<span>2000-01-01</span></li>
-                </ul>
-			</div>
-			<div id="movieImgBox" class="col-sm-6">
-				<img alt="영화 이미지" src="">
+			<div id="movieImgBox" class="col-sm-4 mx-auto">
+				<img src="/images/loading.gif" class="mt-5">
 			</div>
 		</div>
 	</div>
