--- a/src/main/resources/static/css/movieRec.css
+++ b/src/main/resources/static/css/movieRec.css
@@ -5,7 +5,18 @@
 }
 
 .carousel-item img{
-		height: 300px;
+	height: 300px;
 	width: auto;
 	margin: auto;
+}
+
+/* 영화 이미지 */
+ #movieImgBox {
+	overflow: hidden;
+}
+
+#movieImgBox img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
