--- a/src/main/resources/templates/Header.html
+++ b/src/main/resources/templates/Header.html
@@ -13,7 +13,7 @@
 			<div class="col text-end h6 row">
 				<!-- WatCat 폰트 -->
 				<div class="col-lg-4">
-					<p class="h1 text-danger ms-3 float-start" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">WaTCaT</p>
+					<p class="h1 ms-3 float-start" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;" style="color: rgb(182, 0, 55);">WaTCaT</p>
 				</div>
 				<!-- 왼쪽정렬 메뉴 -->
 				<div class="col-lg-8 mt-2 text-white">
