비밀번호 변경 기능 추가 Mypage 세션을 소유 중에만 표시 되도록 수정

--- a/bin/main/templates/account/loginPage.html
+++ b/bin/main/templates/account/loginPage.html
@@ -19,7 +19,7 @@
 				success:function(data){
 					if (data.result == "success") {
 					
-						location.href="/movie/rec";
+						location.href="/";
 						
 					}else{
 						$("#login-state").text("이메일 주소 혹은 비밀번호를 다시 확인해주세요");
