--- a/bin/main/templates/MyPage/MyPagePW.html
+++ b/bin/main/templates/MyPage/MyPagePW.html
@@ -6,7 +6,24 @@
 <title>Mypage</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <link rel="stylesheet" href="/css/style.css">
+<script>
+    
+        function passwordchk(){
+            var pw1 = $("#userPw").val();
+            var pw2 = $("#userPwCkeck").val();
+
+            if(pw1 == pw2)
+            {
+                return confirm("수정 하시겠습니까?");
+            } else{   
+                $("#checkpw").text("비밀번호가 일치 하지 않습니다.");
+                return false;
+            }
+        }
+    
+</script>
 </head>
 <body class="bg2ndColor">
     <div class="m-3 h-100">
@@ -21,20 +38,21 @@
             <!-- 메인영역 -->
             <main class="col-lg-9 bg-black text-white mainPannel h-100">    
                 <div class="h-100">
-                    <form action="" method="get" class="w-50 mx-auto px-lg-5 mt-lg-5">
+                    <form action="/mypage/updatepw" method="post" class="w-50 mx-auto px-lg-5 mt-lg-5">
                         <h3 class="my-5">비밀번호 변경 하기</h3>
                         
                         <div class="form-floating bg-black">
-                            <input type="text" id="userPw" name="userPw" class="form-control bg-black text-white" autocomplete="off">
+                            <input type="password" id="userPw" name="userPw" class="form-control bg-black text-white" autocomplete="off">
                             <label>새로운 비밀번호</label>
                         </div>
                         <div class="form-floating my-2">
-                            <input type="text" id="userPw" name="userPw" class="form-control bg-black text-white" autocomplete="off">
+                            <input type="password" id="userPwCkeck" name="userPwCkeck" class="form-control bg-black text-white" autocomplete="off">
                             <label>새로운 비밀번호 확인</label>
                         </div>
+                        <p id="checkpw" name="checkpw" class="text-danger"></p>
                         <div class="text-end my-3">
-                            <button type="submit" class="btn btn-outline-primary">확인</button>
-                            <button type="reset" class="btn btn-outline-danger">취소</button>
+                            <input type="submit" class="btn btn-outline-primary" value="확인" onClick="return passwordchk()"></input>
+                            <input type="reset" class="btn btn-outline-danger" value="취소"></input>
                         </div>
                     </form>
                 </div>
