--- a/src/main/resources/templates/account/loginPage.html
+++ b/src/main/resources/templates/account/loginPage.html
@@ -19,7 +19,7 @@
 				success:function(data){
 					if (data.result == "success") {
 					
-						location.href="/movie/rec";
+						location.href="/";
 						
 					}else{
 						$("#login-state").text("이메일 주소 혹은 비밀번호를 다시 확인해주세요");
