--- a/bin/main/templates/Header.html
+++ b/bin/main/templates/Header.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header th:fragment="header">
-		<div class="p-3 row bg2ndColor mx-0">
-			<div class="col text-end h6 row px-lg-5">
+		<div class="p-3 bg2ndColor mx-0">
+			<div class="text-end h6 row ps-5 pe-3">
 				<!-- WatCat 폰트 -->
 				<div class="col-lg-4">
 					<p class="h1 ms-3 float-start" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color: rgb(182, 0, 55);" >WaTCaT</p>
