--- a/bin/main/templates/MyPage/MyPage.html
+++ b/bin/main/templates/MyPage/MyPage.html
@@ -10,7 +10,7 @@
 </head>
 <body class="bg2ndColor">
     <div>
-        <!-- 헤더 영역 -->
+        <!-- 헤더 영역 test주석 -->
         <header th:include="Header :: header" class="fixed-top px-0 mx-0">
         </header>
         
@@ -21,7 +21,7 @@
             <!-- 메인영역 -->
             <main class="col-lg-9 bg-black text-white">    
                 <div>
-                    마이페이지
+                    마이페이지 tes text111
                 </div>
             </main>
         </div>
