--- a/src/main/resources/templates/MyPage/MypageInterested.html
+++ b/src/main/resources/templates/MyPage/MypageInterested.html
@@ -21,7 +21,7 @@
             <!-- 메인영역 -->
             <main class="col-lg-9 bg-black text-white">    
                 <div>
-                    찜리스트
+                    찜리스트 222
                 </div>
             </main>
         </div>
