--- a/bin/main/templates/MyPage/MyPagePW.html
+++ b/bin/main/templates/MyPage/MyPagePW.html
@@ -36,8 +36,9 @@
             <nav th:include="/Mypage/nav :: nav" class="col-lg-3 px-5">
             </nav>
             <!-- 메인영역 -->
-            <main class="col-lg-9 bg-black text-white p-0">    
-                <div class="h-100">
+            <main class="col-lg-9 bg-black text-white" style="padding-top: 100px;">    
+                aaa
+                <div>
                     <form action="/mypage/updatepw" method="post" class="w-50 mx-auto px-lg-5">
                         <h3 class="my-5">비밀번호 변경 하기</h3>
                         
