--- a/src/main/resources/templates/MyPage/Mypage.html
+++ b/src/main/resources/templates/MyPage/Mypage.html
@@ -19,7 +19,7 @@
             <nav th:include="/Mypage/nav :: nav" class="col-lg-3 px-5">
             </nav>
             <!-- 메인영역 -->
-            <main class="col-lg-9 bg-black text-white">    
+            <main class="col-lg-9 bg-black text-white"  style="padding-top: 100px;">    
                 <div>
                     마이페이지 tes text111
                 </div>
