--- a/src/main/resources/templates/MyPage/MypagePW.html
+++ b/src/main/resources/templates/MyPage/MypagePW.html
@@ -36,7 +36,7 @@
             <nav th:include="/Mypage/nav :: nav" class="col-lg-3 px-5">
             </nav>
             <!-- 메인영역 -->
-            <main class="col-lg-9 bg-black text-white p-0">    
+            <main class="col-lg-9 bg-black text-white" style="padding-top: 100px;">
                 <div>
                     <form action="/mypage/updatepw" method="post" class="w-50 mx-auto px-lg-5">
                         <h3 class="my-5">비밀번호 변경 하기</h3>
