--- a/src/main/resources/templates/MyPage/nav.html
+++ b/src/main/resources/templates/MyPage/nav.html
@@ -9,7 +9,7 @@
 <body>
     <!-- 아하 -->
     <nav th:fragment="nav" class="bg2ndColor">
-        <div class="text-white mx-auto">
+        <div class="text-white mx-auto"  style="padding-top: 100px;">
             <div class="MyPageSmallListsfont">
                 보관함
             </div>
