--- a/bin/main/static/css/login.css
+++ b/bin/main/static/css/login.css
@@ -14,6 +14,11 @@
 		 border-radius:50px;
 		 font-size: 16px;
 	}
+	
+	#btn-ajax-signup{
+		border-radius:50px;
+		width:100%
+	}
 
 	main{
 		display: flex;
@@ -60,6 +65,21 @@
 	height:20px;
     background:url(../images/x-mark.png) 0 0 / 20px 20px no-repeat;
 	}
+	
+	.checkIconPw{
+	display:inline-block;
+	width:20px;
+	height:20px;
+	background:url(../images/check-mark.png) 0 0 / 20px 20px no-repeat;
+	}
+	
+	.xMarkPw{
+	display:inline-block;
+	width:20px;
+	height:20px;
+    background:url(../images/x-mark.png) 0 0 / 20px 20px no-repeat;
+	}
+	
 	input:focus{
 		outline:none;
 	}
