--- a/src/main/resources/templates/account/signUpPage.html
+++ b/src/main/resources/templates/account/signUpPage.html
@@ -17,7 +17,6 @@ $(document).ready(function(){
 	let userPw = $("#password-input");
 	
 	//이메일 유효성 검사
-
 	
 	$(userId).on("propertychange change paste input",userId,function(){
 		if(CheckEmail(userId.val())){
@@ -38,9 +37,11 @@ $(document).ready(function(){
 				$("#email-box").append("<span class='xMark float-end'></span>");	
 				
 			}else if(userId.val()==null||userId.val()==""){
-				$("span").removeClass("xMark")
+				$("span").removeClass("xMark");
 			}
 			else if($("span").hasClass("xMark")){
+				
+				return;
 				
 			}else if(!$("span").hasClass("checkIcon")&&!$("span").hasClass("xMark")){
 				
@@ -49,20 +50,55 @@ $(document).ready(function(){
 			}
 		}	
 	});
+
+	//비밀번호 6자리이상
 	
-	
-	$("#btn-login").on("click",function(){
+	$(userPw).on("propertychange change paste input",userPw,function(){
 		
-		
-		location.href="/login";
+		if(userPw.val().length>=6){
+			if($("span").hasClass("xMarkPw")){
+				
+				$("span").removeClass("xMarkPw");
+				$("#password-box").append("<span class='checkIconPw float-end'></span>");
+			
+			}else if($("span").hasClass("checkIconPw")){
+				
+				return;
+					
+			}else{
+					
+				$("#password-box").append("<span class='checkIconPw float-end'></span>");
+				
+			}
+		}else{
+			
+			if($("span").hasClass("checkIconPw")){
+				
+				$("#password-box").append("<span class='xMarkPw float-end'></span>");
+				$("span").removeClass("checkIconPw");
+				
+			}else if(userPw.val()==null||userPw.val()==""){
+			
+				$("span").removeClass("xMarkPw");
+				
+			}else if($("span").hasClass("xMarkPw")){
+				
+				return;
+				
+			}else if(!$("span").hasClass("checkIconPw")&&!$("span").hasClass("xMarkPw")){
+				
+				$("#password-box").append("<span class='xMarkPw float-end'></span>");
+				
+			}
+			
+		}
 		
 	});
 	
-	$("#btn-signup").on("click",function(){	
+	$("#btn-ajax-signup").on("click",function(){	
 	
-		
 		if(CheckEmail(userId.val())){
-			//아이디 비밀번호 체크
+			//아이디 체크
 			$.ajax({
 				url:"/signup",
 				type:"post",
@@ -83,14 +119,12 @@ $(document).ready(function(){
 			});
 		
 		}else{
-
+	
 			$("#login-state").text("이메일 형식을 확인해주세요");
-			
+				
 		}
 	});
-	
-	
-	
+			
 });	
 
 //이메일 형식 확인 함수
@@ -113,14 +147,14 @@ function CheckEmail(str){
 </head>
 <body>
 	
+		<nav class="container-fluid row">
+			<div class="h3 text-danger col-6" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">WaTCaT</div>
+			<div class="col-6">
+				<button id="btn-login"class="font-weight-bold btn btn-light float-end me-0"
+				 style="border-radius:50px;font-size: 16px;"onclick="location.href='/login'">로그인</button>
+			</div>	
+		</nav>
 		<div id="login-background" >
-			<nav class="container-fluid row">
-				<div class="h3 text-danger col-6" style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">WaTCaT</div>
-				<div class="col-6">
-					<button id="btn-login"class="font-weight-bold btn btn-light float-end me-0">로그인</button>
-				</div>	
-			</nav>
-			
 			<main class="row container-fluid">
 				<div class="container col-4 mx-auto me-auto main-box">
 						<h4 class="text-white font-weight-bold">회원가입</h4>
@@ -130,12 +164,11 @@ function CheckEmail(str){
 						</div>
 						
 						<div id="password-box" class="p-3">
-							<input id="password-input" type="password" size="28" placeholder="비밀번호">
-<!--  							<img src="images/check-2.png" style=" padding-left:15px; height:30px"> -->
+							<input id="password-input" type="password" size="28" placeholder="비밀번호(6글자이상)">
 						</div>
 						<p id="login-state" class="text-danger pt-2"></p>
 						<div class="container-fluid mt-3 p-0">
-							<button id="btn-sigiup"class="btn btn-danger" style='width:100%;'>계정 생성</button>
+							<button id="btn-ajax-signup"class="btn btn-danger">계정 생성</button>
 						</div>
 				
 				</div>	
